--- a/css/main.scss
+++ b/css/main.scss
@@ -454,8 +454,6 @@ footer {
     }
   }
 }
-
-
 /* My Work Page */
 #my-work-page {
   background: white;
@@ -484,9 +482,62 @@ footer {
     article {
       padding-bottom: 50px;
       width: 100%;
+      p {
+        text-align: left;
+      }
     }
     img {
       border-radius: 10px;
+      padding-bottom: 10px;
+      width: 100%;
+    }
+    a:link,
+    a:visited {
+      color: black;
+      font-weight: 600;
+      text-decoration: none;
+    }
+    a:hover {
+      border-bottom: 2px solid $sea-green;
+    }
+  }
+}
+
+/* Case Study Page */
+#case-study-page {
+  background: white;
+  .content-wrapper {
+    padding-top: 50px;
+  }
+  h1 {
+    padding-bottom: 50px;
+    text-align: center;
+  }
+  span {
+    color: $sea-green;
+  }
+  hr {
+    border-top: $pink-border;
+    margin: 0 auto;
+    width: 200px;
+  }
+  .case-study-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    text-align: center;
+    article {
+      padding-bottom: 50px;
+      width: 100%;
+      p {
+        text-align: left;
+      }
+    }
+    img {
+      border-radius: 10px;
+      padding-bottom: 50px;
       width: 100%;
     }
     a:link,
@@ -622,6 +673,43 @@ footer {
   /* My Work Page */
   #my-work-page {
     .work-page-container {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      text-align: center;
+      article {
+        padding-bottom: 100px;
+        width: 40%;
+      }
+      article:nth-child(1) {
+        order: 2;
+      }
+      article:nth-child(2) {
+        order: 1;
+      }
+      article:nth-child(3) {
+        order: 2;
+      }
+      article:nth-child(4) {
+        order: 3;
+      }
+      article:nth-child(5) {
+        order: 6;
+      }
+      article:nth-child(6) {
+        order: 5;
+      }
+      article:nth-child(7) {
+        order: 6;
+      }
+      article:nth-child(8) {
+        order: 7;
+      }
+    }
+  }
+  /* Case Study Page */
+  #case-study-page {
+    .case-study-container {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
