Updated about page

--- a/css/main.scss
+++ b/css/main.scss
@@ -350,6 +350,9 @@ footer {
   span {
     color: $sea-green;
   }
+  h2 {
+    text-align: center;
+  }
   hr {
     border-top: $pink-border;
     margin: 0 auto;
