--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,16 @@ h4 {
 span {
   color: #ff8581; }
 
+a,
+a:link,
+a:visited {
+  color: black;
+  font-weight: 600;
+  text-decoration: none; }
+
+a:hover {
+  border-bottom: 2px solid #27746b; }
+
 /* Buttons*/
 .button-container {
   margin-top: 35px; }
