--- a/css/main.scss
+++ b/css/main.scss
@@ -105,6 +105,14 @@
   $pink-border: 2px solid $pink;
   $skill-border: 10px solid $pink;
   
+  $bold: 700;
+  $extra-bold: 800;
+  $regular: 400;
+  $semi-bold: 600;
+/* Mixins */
+@mixin transition {
+  transition: 1s background-color, 1s color;
+}
   /* Universal Styles */
   html {
     margin: 0;
@@ -115,7 +123,7 @@
     font-size: 16px;
   }
   .content-wrapper {
-    margin: 0px 80px;
+    margin: 0px 30px;
   }
   h1 {
     font-family: $heading-font;
@@ -224,6 +232,8 @@
       color: white;
     }
     p {
+      min-width: 90%;
+      max-width: 100%;
       text-align: left;
     }
   }
@@ -233,31 +243,52 @@
     /* The Tab */
     .tab {
       overflow: hidden;
-      border: 1px solid #ccc;
-      background-color: #f1f1f1;
+      border: none;
+      background-color: $sea-green;
+    }
+    /*The button container */ 
+    .tab-content-container {
+      display: flex;
+      width: 100%;
     }
     /* The buttons */
     .tab button {
       background-color: inherit;
-      float: left;
       border: none;
+      color: white;
+      font-weight: $bold;
+      display: block;
+      font-family: $heading-font;
       outline: none;
+      width: 100%;
       cursor: pointer;
       padding: 14px 16px;
-      transition: 0.3s;
+      text-transform: lowercase;
+      @include transition;
       &:hover {
-        background-color: #ddd;
+        background-color: $pink;
       }
       &.active {
-        background: red;
+        background: white;
+        color: $sea-green;
       }
+    }
+    /* Project container */ 
+    .project-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
     /* Content inside the tab */ 
     .tab-content {
+      border: 1px solid $sea-green;
       display: none;
       padding: 6px 12px;
-      border: 1px solid #ccc;
-      border-top: none;
+      h3 {
+        text-align: center;
+      }
+      height: 400px;
+      width: 100%;
     }
   #my-work {
     background: white;
@@ -610,7 +641,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 20px 0px;
+      padding: 20px 60px;
       }
       nav ul {
         li {
@@ -620,8 +651,10 @@
         }
     }
     /* Hero */
-    #hero p {
-      width: 60%;
+    #hero {
+      .content-wrapper {
+        margin: 0px 80px;
+      }
     }
     /* Services */
     #services {
