--- a/css/main.css
+++ b/css/main.css
@@ -77,8 +77,127 @@ textarea {
   color: #000;
   padding: 0.2em 0; }
 
-/* SASS Variables */
+/* Variables & Mixins */
 /* Mixins */
+/* About Page */
+#about {
+  background: white; }
+  #about .content-wrapper {
+    padding-top: 50px; }
+  #about h1 {
+    padding-bottom: 50px;
+    text-align: center; }
+  #about span {
+    color: #27746b; }
+  #about h2 {
+    text-align: center; }
+  #about hr {
+    border-top: 2px solid #ff8581;
+    margin: 0 auto;
+    width: 200px; }
+  #about .html {
+    background: #27746b;
+    margin: 0 auto;
+    height: 20px;
+    margin-bottom: 10px;
+    width: 200px; }
+  #about .css {
+    background: #27746b;
+    margin: 0 auto;
+    height: 20px;
+    margin-bottom: 10px;
+    border-right: 30px solid #ff8581;
+    width: 170px; }
+  #about .git {
+    background: #27746b;
+    margin: 0 auto;
+    height: 20px;
+    margin-bottom: 10px;
+    border-right: 50px solid #ff8581;
+    width: 150px; }
+  #about .sass {
+    background: #27746b;
+    margin: 0 auto;
+    height: 20px;
+    margin-bottom: 10px;
+    border-right: 100px solid #ff8581;
+    width: 100px; }
+  #about .wordpress {
+    background: #27746b;
+    margin: 0 auto;
+    height: 20px;
+    margin-bottom: 10px;
+    border-right: 50px solid #ff8581;
+    width: 150px; }
+  #about .javascript {
+    background: #27746b;
+    margin: 0 auto;
+    height: 20px;
+    margin-bottom: 10px;
+    border-right: 100px solid #ff8581;
+    width: 100px; }
+  #about .jQuery {
+    background: #27746b;
+    margin: 0 auto;
+    height: 20px;
+    margin-bottom: 10px;
+    border-right: 100px solid #ff8581;
+    width: 100px; }
+  #about b {
+    color: #ff8581; }
+  #about .about-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align: center; }
+    #about .about-container article {
+      padding-bottom: 50px;
+      width: 100%; }
+    #about .about-container p {
+      text-align: justify; }
+    #about .about-container img {
+      border: 10px solid #ff8581;
+      border-radius: 10px;
+      width: 100%; }
+    #about .about-container ul {
+      list-style-type: none;
+      padding: 0; }
+    #about .about-container li {
+      display: block;
+      margin-bottom: 5px; }
+    #about .about-container a,
+    #about .about-container a:link,
+    #about .about-container a:visited {
+      color: black;
+      font-weight: 600;
+      text-decoration: none; }
+    #about .about-container a:hover {
+      border-bottom: 2px solid #27746b; }
+
+@media (min-width: 768px) {
+  /* About Page */
+  #about .about-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align: center; }
+    #about .about-container article {
+      padding-bottom: 50px;
+      width: 80%; }
+    #about .about-container img {
+      border: 10px solid #ff8581;
+      border-radius: 10px;
+      width: 80%; }
+    #about .about-container ul {
+      list-style-type: none;
+      padding: 0; }
+    #about .about-container li {
+      display: block;
+      margin-bottom: 5px; } }
 /* Universal Styles */
 html {
   margin: 0;
@@ -210,7 +329,8 @@ header {
   #my-work .project-container {
     display: flex;
     flex-direction: column;
-    justify-content: center; }
+    justify-content: center;
+    padding-bottom: 25px; }
   #my-work .tab {
     overflow: hidden;
     border: none;
@@ -311,128 +431,6 @@ footer i {
 footer i:hover {
   color: black;
   transition: 1s background-color, .5s color; }
-
-/* About Page */
-#about {
-  background: white; }
-  #about .content-wrapper {
-    padding-top: 50px; }
-  #about h1 {
-    padding-bottom: 50px;
-    text-align: center; }
-  #about span {
-    color: #27746b; }
-  #about h2 {
-    text-align: center; }
-  #about hr {
-    border-top: 2px solid #ff8581;
-    margin: 0 auto;
-    width: 200px; }
-  #about .html {
-    background: #27746b;
-    margin: 0 auto;
-    height: 20px;
-    margin-bottom: 10px;
-    width: 200px; }
-  #about .css {
-    background: #27746b;
-    margin: 0 auto;
-    height: 20px;
-    margin-bottom: 10px;
-    border-right: 30px solid #ff8581;
-    width: 170px; }
-  #about .git {
-    background: #27746b;
-    margin: 0 auto;
-    height: 20px;
-    margin-bottom: 10px;
-    border-right: 50px solid #ff8581;
-    width: 150px; }
-  #about .sass {
-    background: #27746b;
-    margin: 0 auto;
-    height: 20px;
-    margin-bottom: 10px;
-    border-right: 100px solid #ff8581;
-    width: 100px; }
-  #about .wordpress {
-    background: #27746b;
-    margin: 0 auto;
-    height: 20px;
-    margin-bottom: 10px;
-    border-right: 50px solid #ff8581;
-    width: 150px; }
-  #about .javascript {
-    background: #27746b;
-    margin: 0 auto;
-    height: 20px;
-    margin-bottom: 10px;
-    border-right: 100px solid #ff8581;
-    width: 100px; }
-  #about .jQuery {
-    background: #27746b;
-    margin: 0 auto;
-    height: 20px;
-    margin-bottom: 10px;
-    border-right: 100px solid #ff8581;
-    width: 100px; }
-  #about b {
-    color: #ff8581; }
-  #about .about-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    text-align: center; }
-    #about .about-container article {
-      padding-bottom: 50px;
-      width: 100%; }
-    #about .about-container p {
-      text-align: justify; }
-    #about .about-container img {
-      border: 10px solid #ff8581;
-      border-radius: 10px;
-      width: 100%; }
-    #about .about-container ul {
-      list-style-type: none;
-      padding: 0; }
-    #about .about-container li {
-      display: block;
-      margin-bottom: 5px; }
-    #about .about-container a,
-    #about .about-container a:link,
-    #about .about-container a:visited {
-      color: black;
-      font-weight: 600;
-      text-decoration: none; }
-    #about .about-container a:hover {
-      border-bottom: 2px solid #27746b; }
-
-/* Services Page */
-#services-page h1 {
-  padding-bottom: 50px;
-  text-align: center; }
-#services-page h2 {
-  text-align: center; }
-#services-page span {
-  color: #27746b; }
-#services-page .content-wrapper {
-  padding-top: 50px; }
-#services-page .services-page-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  text-align: center; }
-  #services-page .services-page-content article {
-    padding-bottom: 100px;
-    width: 100%; }
-  #services-page .services-page-content i {
-    color: #ff8581;
-    padding-bottom: 10px; }
-  #services-page .services-page-content span {
-    border-bottom: 2px solid #ff8581; }
 
 /* My Work Page */
 #my-work-page {
@@ -576,39 +574,6 @@ footer i:hover {
   footer {
     margin: 0 auto;
     width: 60%; }
-
-  /* About Page */
-  #about .about-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    text-align: center; }
-    #about .about-container article {
-      padding-bottom: 50px;
-      width: 80%; }
-    #about .about-container img {
-      border: 10px solid #ff8581;
-      border-radius: 10px;
-      width: 80%; }
-    #about .about-container ul {
-      list-style-type: none;
-      padding: 0; }
-    #about .about-container li {
-      display: block;
-      margin-bottom: 5px; }
-
-  /* Services Page */
-  #services-page .services-page-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    text-align: center; }
-    #services-page .services-page-content article {
-      padding-bottom: 100px;
-      width: 40%; }
 
   /* My Work Page */
   #my-work-page .work-page-container {
