--- a/css/main.scss
+++ b/css/main.scss
@@ -93,29 +93,11 @@
     color: #000;
     padding: 0.2em 0;
   }
-  
-  /* SASS Variables */
-  
-  $body-font: 'Open Sans', sans-serif;
-  $heading-font: 'Montserrat', sans-serif;
-  
-  $sea-green: #27746b;
-  $pink: #ff8581;
-  
-  $pink-border: 2px solid $pink;
-  $skill-border: 10px solid $pink;
-  
-  $bold: 700;
-  $extra-bold: 800;
-  $regular: 400;
-  $semi-bold: 600;
-/* Mixins */
-@mixin transition {
-  transition: 1s background-color, .5s color;
-}
-@mixin opacity-transition {
-  transition: .5s opacity;
-}
+  /* Variables & Mixins */
+  @import "colors";
+  @import "fonts";
+  @import "mixins";
+  @import "about-page";
   /* Universal Styles */
   html {
     margin: 0;
@@ -264,6 +246,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      padding-bottom: 25px;
     }
     /* The Tab */
     .tab {
@@ -395,146 +378,6 @@
     i:hover {
       color: black;
       @include transition;
-    }
-  }
-  
-  /* About Page */
-  
-  #about {
-    background: white;
-    .content-wrapper {
-      padding-top: 50px;
-    }
-    h1 {
-      padding-bottom: 50px;
-      text-align: center;
-    }
-    span {
-      color: $sea-green;
-    }
-    h2 {
-      text-align: center;
-    }
-    hr {
-      border-top: $pink-border;
-      margin: 0 auto;
-      width: 200px;
-    }
-    @mixin skill-bar {
-      background: $sea-green;
-      margin: 0 auto;
-      height: 20px;
-      margin-bottom: 10px;
-    } .html {
-      @include skill-bar;
-      width: 200px;
-    }
-    .css {
-      @include skill-bar;
-      border-right: 30px solid $pink;
-      width: 170px;
-    }
-    .git {
-      @include skill-bar;
-      border-right: 50px solid $pink;
-      width: 150px;
-    }
-    .sass {
-      @include skill-bar;
-      border-right: 100px solid $pink;
-      width: 100px;
-    }
-    .wordpress {
-      @include skill-bar;
-      border-right: 50px solid $pink;
-      width: 150px;
-    }
-    .javascript {
-      @include skill-bar;
-      border-right: 100px solid $pink;
-      width: 100px;
-    }
-    .jQuery {
-      @include skill-bar;
-      border-right: 100px solid $pink;
-      width: 100px;
-    }
-    b {
-      color: $pink;
-    }
-    .about-container {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-      text-align: center;
-      article {
-        padding-bottom: 50px;
-        width: 100%;
-      }
-      p {
-        text-align: justify;
-      }
-      img {
-        border: 10px solid $pink;
-        border-radius: 10px;
-        width: 100%;
-      }
-      ul {
-        list-style-type: none;
-        padding: 0;
-      }
-      li {
-        display: block;
-        margin-bottom: 5px;
-      }
-  
-      a,
-      a:link,
-      a:visited {
-        color: black;
-        font-weight: 600;
-        text-decoration: none;
-      }
-      a:hover {
-        border-bottom: 2px solid $sea-green;
-      }
-    }
-  }
-  
-  /* Services Page */
-  #services-page {
-    h1 {
-      padding-bottom: 50px;
-      text-align: center;
-    }
-    h2 {
-      text-align: center;
-    }
-    span {
-      color: $sea-green;
-    }
-    .content-wrapper {
-      padding-top: 50px;
-    }
-    .services-page-content {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      text-align: center;
-      article {
-        padding-bottom: 100px;
-        width: 100%;
-      }
-      i {
-        color: $pink;
-        padding-bottom: 10px;
-      }
-      span {
-        border-bottom: $pink-border;
-      }
     }
   }
   /* My Work Page */
@@ -720,49 +563,6 @@
     footer {
       margin: 0 auto;
       width: 60%;
-    }
-    /* About Page */
-    #about {
-      .about-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        flex-wrap: wrap;
-        text-align: center;
-        article {
-          padding-bottom: 50px;
-          width: 80%;
-        }
-        img {
-          border: 10px solid $pink;
-          border-radius: 10px;
-          width: 80%;
-        }
-        ul {
-          list-style-type: none;
-          padding: 0;
-        }
-        li {
-          display: block;
-          margin-bottom: 5px;
-        }
-      }
-    }
-  
-    /* Services Page */
-    #services-page {
-      .services-page-content {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        text-align: center;
-        article {
-          padding-bottom: 100px;
-          width: 40%;
-        }
-      }
     }
     /* My Work Page */
     #my-work-page {
